* Reduce object property lookups by creating private variables and perform some code cleanup. [jddalton]

* Fix bug in Fuse.Object.isSameOrigin() that allowed urls ending with the same domain name to pass. [jddalton]

* Ensure Fuse.Object.toQueryString() only enumerates over an object's own direct properties. [Prototype LH #126] [jddalton, kitsg, Peter Gyongyosi]

* unit test: Add option to dynamically set the Fuse.debug flag in the test template. [jddalton]

* Fuse.debug flag set based on query string parameters in script tag [jddalton, Thomas Fuchs, Mark Caudill]

* Namespace Fuse.Exception added to use Firebug or to throw an exception via the Fuse.debug flag. [FuseJS LH #52] [jddalton, Mark Caudill]

* Rethrow errors when `onException` callbacks are not provided for Fuse.Ajax.Request instances. [Prototype LH #634] [jddalton, Spezi]

* unit test: Fix bug in Test.Unit.Testcase#benchmark failing to use Fuse.Number#times. [jddalton]

* Add `timeout` option and `onTimeout` event callbacks to Fuse.Ajax.Request. [FuseJS LH #37] [Prototype LH #220] [jddalton, Laurent Fortin, Mark Caudill]

* Optimize the Element constructor giving it a massive performance boost in all browsers. [FuseJS LH #50] [Diego Perini, jddalton]

* Tweaked a line in the Rakefile to automatically run `rake dist` before running `rake build_unit_tests`. [kitsg]

* unit test: Change Fuse.Ajax.Request `onComplete` callback to `onDone` in the html template and update Fuse.Dom.Selector tests to reflect the changed doctype. [jddalton]

* unit test: Add Fuse version number to the html templates. [jddalton, Tobie Langel]

* Fix Fuse.Ajax.TimedUpdater#maxDecay and add relevant unit tests. [Prototype LH #419] [Casey Watson, jddalton]

* Catch Firefox error when accessing Fuse.Ajax.Request#status caused by status 408 Request Timeout. [jddalton, Monsur Hossain]

* Count Fuse.Ajax.Request#status 304 as a successful request. [Prototype LH #331] [jddalton, Kenneth Kin Lum]
